updating email sending during customer registration

--- a/src/main/resources/templates/mail-register-new-user-admin-confirmation.html
+++ b/src/main/resources/templates/mail-register-new-user-admin-confirmation.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1 style="font-size:45px;color:#36bda5;font-weight:600">MůjPoukaz.cz - Registrace nového uživatele</h1>
+<h1 style="font-size:45px;color:#36bda5;font-weight:600">ADMIN MůjPoukaz.cz - Registrace nového uživatele</h1>
 <p>Dobrý den,</p>
 <p>Tento email je určen pro administrátory portálu www.mujpoukaz.cz. Dne <span th:text="${userRegisterDate}"></span> došlo k registraci nového uživatelského účtu <span th:text="${userEmail}"></span> ve formuláři pro registraci nových lékařů do portálu. Tento účet je zatím neaktivní.</p>
 <p><b>Pro jeho aktivaci použíjte odkaz níže.</b> Po potvrzení aktivace uživatelského účtu bude na emailovou adresu odeslán email obsahující přihlašovací jméno a heslo</p>
